--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -91,7 +91,10 @@
             <artifactId>nimbus-jose-jwt</artifactId>
             <version>10.3.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+        </dependency>
 
 
     </dependencies>
