--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 
 COPY pom.xml .
 
+RUN mvn dependency:go-offline -B
+
 COPY src/ ./src/
 
 RUN mvn -f /app/pom.xml clean package -DskipTests
